2001-03-04  Torbjorn Granlund  <tege@swox.com>

	* gmp-impl.h (RANDS): Add a `,0' to make it compile on more compilers.

2001-03-03  Kevin Ryde  <kevin@swox.se>

	* mpz/n_pow_ui.c (ULONG_PARITY): Move to gmp-impl.h.
	* gmp-impl.h (ULONG_PARITY): i386 part from n_pow_ui.c, new generic
	form by Torbjorn.

	* tests/mpz/t-div_2exp.c: New file, rewrite of t-2exp.c.
	* tests/mpz/t-2exp.c: Remove file.
	* tests/mpz/Makefile.am (check_PROGRAMS): Update.

	* gmp-h.in (mpz_cdiv_q_2exp, mpz_cdiv_q_2exp): Add prototypes.
	* gmp.texi (Integer Division): Add mpz_cdiv_q_2exp and mpz_cdiv_q_2exp.

	* mpz/cfdiv_q_2exp.c: New file, partial rewrite of fdiv_q_2exp.c, add
	mpz_cdiv_q_2exp entrypoint.
	* mpz/cfdiv_r_2exp.c: New file, rewrite of fdiv_r_2exp.c, use all mpn,
	add mpz_cdiv_r_2exp entrypoint.
	* mpz/fdiv_q_2exp.c, mpz/fdiv_r_2exp.c: Remove files.
	* mpz/Makefile.am (libmpz_la_SOURCES): Update.
	* Makefile.am (MPZ_OBJECTS): Ditto.

	* gmp-impl.h (USE_LEADING_REGPARM): Use __i386__ same as longlong.h
	(REGPARM_2_1, REGPARM_3_1, REGPARM_ATTR): New macros.
	* mpz/jacobi.c (jac_or_kron): Use them.

	* configure.in (HAVE_ABI_$ABI): Re-enable this for config.m4, with
	dots changed to underscores (necessary for hppa).

	* tests/mpz/t-divis.c, tests/mpz/t-divis_2exp.c: New files.
	* tests/mpz/Makefile.am (check_PROGRAMS): Add them.

	* gmp-h.in (mpz_divisible_p, mpz_divisible_ui_p,
	mpz_divisible_2exp_p): Add prototypes.
	* gmp.texi (Integer Division): Add mpz_divisible_p.
	(Efficiency): Add remarks about divisibility testing.

	* mpz/divis.c, mpz/divis_ui.c, mpz/divis_2exp.c: New files.
	* mpz/Makefile.am (libmpz_la_SOURCES): Add them.
	* Makefile.am (MPZ_OBJECTS): Ditto.

	* mpn/generic/divis.c: New file.
	* configure.in (gmp_mpn_functions): Add it.
	* mpn/Makefile.am (nodist_libdummy_la_SOURCES): Ditto.
	* gmp-impl.h (mpn_divisible_p): Add prototype.

	* urandom.h: Remove file.
	* Makefile.am (EXTRA_DIST): Remove it.
