@@ -1,5 +1,11 @@
 2001-03-04  Torbjorn Granlund  <tege@swox.com>
 
+	* longlong.h (CRAY udiv_qrnnd): No longer conditional on CRAYMPP.
+	(64-bit hppa add_ssaaaa): New.
+	(64-bit hppa sub_ddmmss): New.
+
+	* mpn/cray/ieee/invert_limb.c: New file.
+
 	* gmp-impl.h (RANDS): Add a `,0' to make it compile on more compilers.
 
 2001-03-03  Kevin Ryde  <kevin@swox.se>
